// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadcrumbsItem /> last item should render BreadcrumbsItem 1`] = `
<div>
  <div
    class="mfui-breadcrumbs-item"
  >
    <span>
      Title
    </span>
  </div>
</div>
`;

exports[`<BreadcrumbsItem /> should render BreadcrumbsItem 1`] = `
<div>
  <div
    class="mfui-breadcrumbs-item"
  >
    <a
      class="mfui-text-link mfui-text-link_underline-visibility_hover mfui-text-link_underline-style_solid mfui-text-link_color_blue"
    >
      <span>
        Title
      </span>
    </a>
  </div>
</div>
`;
